<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
	    android:id="@+id/txt_settings"
	    android:layout_margin="40px"
	    android:textStyle="bold"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/title_settings" android:textSize="24sp"/>
        
	<TextView
	    android:id="@+id/txt_ip_label"
	    android:layout_marginLeft="15px"
	    android:textStyle="normal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/comment_setting" android:textSize="16sp"/>
	
	<EditText
	    android:id="@+id/txt_ip"
	    android:layout_margin="15px"
	    android:textStyle="normal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="" android:textSize="12sp"/>
	
	<CheckBox android:id="@+id/ckb_light_theme"
	    android:layout_margin="15px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_light" />
	
	<CheckBox android:id="@+id/ckb_clear_cache"
	    android:layout_margin="15px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_clear_cache" />
	
	
		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		     android:layout_marginTop="30px"
		    >
		    <Button android:text="@string/back" android:background="@drawable/rounded_button" android:layout_width="wrap_content" android:id="@+id/bt_back" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:padding="15px" android:textSize="20dp" android:layout_marginRight="30px" android:minWidth="150px" android:layout_marginBottom="40px"></Button>
			<Button android:text="@string/save" android:background="@drawable/rounded_button" android:id="@+id/bt_save"  android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:padding="15px" android:textSize="20dp" android:layout_width="wrap_content" android:minWidth="150px"></Button>
		
		</LinearLayout>
</LinearLayout>
</ScrollView>


